--- a/WEEK 3/nextjsproject/package.json
+++ b/WEEK 3/nextjsproject/package.json
@@ -12,7 +12,9 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.7.0",
+    "regraph": "^0.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
