--- a/WEEK 4/package.json
+++ b/WEEK 4/package.json
@@ -3,18 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- 
   "scripts": {
-   "test": "echo \"Error: no test specified\" && exit 1",
-  "dev": "NODE_ENV=dev nodemon server.js",
-  "start": "NODE_ENV=prod node server.js"
-},
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=dev nodemon server.js",
+    "start": "NODE_ENV=prod node server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
